src/test/ui/rfc-2627-raw-dylib/multiple-declarations.stderr
error: multiple declarations of external function `f` from library `foo.dll` have different calling conventions
  --> $DIR/multiple-declarations.rs:14:9
   |
LL |         fn f(x: i32);
   |         ^^^^^^^^^^^^^

error: aborting due to previous error

